Fix invisible batch actions

--- a/app/assets/stylesheets/active_material/components/dropdown.scss
+++ b/app/assets/stylesheets/active_material/components/dropdown.scss
@@ -28,6 +28,6 @@
 
   li a {
     @include am-menu-link;
-    @incldue am-menu-item-open;
+    @include am-menu-item-open;
   }
 }
